# src/main/java/com/hosp/controller/ActionController.java
@@ -3,6 +3,7 @@ package com.hosp.controller;
 import com.hosp.dto.DoctorDto;
 import com.hosp.dto.SpecialtyDto;
 import com.hosp.service.ActionService;
+import com.hosp.utills.RequestMappings;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -16,26 +17,27 @@ import java.util.List;
  * Created by Daria Popova on 03.04.17.
  */
 @Controller
+@RequestMapping(value = RequestMappings.ACTION)
 public class ActionController {
 
     @Autowired
     private ActionService actionService;
 
-    @RequestMapping(value = "/specialty", method = RequestMethod.GET)
+    @RequestMapping(value = "/doctor", method = RequestMethod.GET)
     @ResponseBody
     public List<SpecialtyDto> getSpecialties() {
         return actionService.getSpecialties();
     }
 
-    @RequestMapping(value = "/doctors/{id}", method = RequestMethod.GET)
+    @RequestMapping(value = "/doctor/{id}", method = RequestMethod.GET)
     @ResponseBody
     public DoctorDto getDoctor(@PathVariable Long id) {
         return actionService.getDoctor(id);
     }
 
-    @RequestMapping(value = "/home")
+    @RequestMapping(value = "/")
     @ResponseBody
     public String home() {
-        return "home";
+        return "";
     }
 }
